--- a/form1.html
+++ b/form1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
+  <title>Vinay</title>
+    <meta charset="utf-8">
 </head>
 <body>
 <fieldset>
