--- a/form1.html
+++ b/form1.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Vinay</title>
-    
 </head>
 <body>
 <fieldset>
@@ -49,7 +45,6 @@
 <input type="submit" name="Submit"/>
 <input type="reset" name="Clear"/>
 </td>
-</tr>
-  </table>
+
 </body>
 </html>
